SearchService, Searchbar update (bug: suggestion box visibility)

--- a/src/app/search-service/search.component.css
+++ b/src/app/search-service/search.component.css
@@ -1,3 +1,40 @@
-p {
-  color: white;
+
+#myInput {
+  box-sizing: border-box;
+  background-position: 14px 12px;
+  background-repeat: no-repeat;
+  font-size: 16px;
+  padding: 4px 2px 2px 4px;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  min-width: 200px;
+
 }
+
+#myInput:focus {outline: 3px solid #ddd;}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  visibility: visible;
+  position: absolute;
+  background-color: #f6f6f6;
+  min-width: 200px;
+  overflow: auto;
+  border: 1px solid #ddd;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 2px 6px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+
